[gd_scene load_steps=10 format=3 uid="uid://bdsfmqfnh3l25"]

[ext_resource type="Script" path="res://puzzle_magic_book/magic_book/scripts/magic_book.gd" id="1_wt5bb"]
[ext_resource type="Resource" uid="uid://dspufr1rur85m" path="res://puzzle_magic_book/magic_book/data/magic_book.tres" id="2_cnfls"]
[ext_resource type="Resource" uid="uid://f0gm0n7j0l15" path="res://puzzle_magic_book/dialogs/player_monolog_book.tres" id="4_6gw1u"]
[ext_resource type="Script" path="res://dialogue/data/dialog_data.gd" id="4_rh0rr"]
[ext_resource type="Resource" uid="uid://cbce47vyksti4" path="res://puzzle_magic_book/task_get_magic_book/get_magic_book.tres" id="5_tbsil"]
[ext_resource type="Texture2D" uid="uid://r168os8hvrkp" path="res://resource/assets/items/libro.png" id="6_nn34i"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="7_is7y2"]
[ext_resource type="FontFile" uid="uid://j1vfrfh8ab2q" path="res://resource/fonts/KGMidnightMemories.ttf" id="10_kutoa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq5mh"]
size = Vector2(203, 201)

[node name="MagicBook" type="Node2D"]
script = ExtResource("1_wt5bb")
item = ExtResource("2_cnfls")
dialog = Array[ExtResource("4_rh0rr")]([ExtResource("4_6gw1u")])
task = ExtResource("5_tbsil")

[node name="MagicBook" type="Sprite2D" parent="."]
texture = ExtResource("6_nn34i")

[node name="Interactable" parent="." instance=ExtResource("7_is7y2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(3.5, 0.5)
shape = SubResource("RectangleShape2D_kq5mh")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -79.0
offset_top = -154.0
offset_right = 72.0
offset_bottom = -77.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("10_kutoa")
theme_override_font_sizes/font_size = 30
text = "Pick up"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
